--- a/package.json
+++ b/package.json
@@ -33,23 +33,52 @@
   ],
   "scripts": {
     "dev": "tsc -w",
+    "test": "jest spec/*.spec.ts",
+    "commit": "cz",
+    "release": "node ./publish.js",
     "prebuild": "rimraf dist types",
     "build": "tsc -b",
-    "test": "jest spec/*.spec.ts",
-    "prepublishOnly": "pnpm install && npm run test && npm run build"
+    "prepublishOnly": "pnpm run build",
+    "prepare": "husky install"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
+    "@commitlint/cz-commitlint": "^16.2.3",
     "@types/jest": "^27.4.1",
+    "@types/node": "^17.0.23",
+    "@typescript-eslint/eslint-plugin": "^5.16.0",
+    "@typescript-eslint/parser": "^5.16.0",
+    "commitizen": "^4.2.4",
+    "conventional-changelog-cli": "^2.2.2",
+    "conventional-recommended-bump": "^6.1.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "inquirer": "^8.2.2",
     "jest": "^27.5.1",
-    "postcss": ">=8.0.0",
+    "postcss": "^8.0.0",
+    "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
+    "shelljs": "^0.8.5",
     "ts-jest": "^27.1.3",
     "typescript": "^4.6.2"
   },
   "peerDependencies": {
-    "postcss": ">=8.0.0"
+    "postcss": "^8.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts}": [
+      "eslint --fix"
+    ]
   }
 }
